--- a/custom_components/poolcopilot/manifest.json
+++ b/custom_components/poolcopilot/manifest.json
@@ -9,6 +9,7 @@
   "requirements": [],
   "config_flow": true,
   "iot_class": "cloud_polling",
-  "is_built_in": false
+  "is_built_in": false,
+  "icon": "icon.png" 
 }
 
