--- a/custom_components/mypoolcopilot/manifest.json
+++ b/custom_components/mypoolcopilot/manifest.json
@@ -9,7 +9,6 @@
   "requirements": [],
   "config_flow": true,
   "iot_class": "cloud_polling",
-  "is_built_in": false,
-  "icon": "images/icon.png"
+  "is_built_in": false
 }
 
