Fix: fix local path for icon

--- a/custom_components/mypoolcopilot/manifest.json
+++ b/custom_components/mypoolcopilot/manifest.json
@@ -10,6 +10,6 @@
   "config_flow": true,
   "iot_class": "cloud_polling",
   "is_built_in": false,
-  "icon": "../../images/icon.png"
+  "icon": "/local/images/icon.png"
 }
 
