--- a/custom_components/mypoolcopilot/manifest.json
+++ b/custom_components/mypoolcopilot/manifest.json
@@ -1,11 +1,13 @@
 {
   "domain": "mypoolcopilot",
-  "name": "MyPoolCopilot ",
-  "version": "4.2.0",
+  "name": "MyPoolCopilot",
+  "version": "4.2.1",
   "documentation": "https://github.com/gstax/mypoolcopilot",
   "issue_tracker": "https://github.com/gstax/mypoolcopilot/issues",
   "dependencies": [],
-  "codeowners": ["@gstax"],
+  "codeowners": [
+    "@gstax"
+  ],
   "requirements": [],
   "config_flow": true,
   "iot_class": "cloud_polling",
