--- a/custom_components/mypoolcopilot/manifest.json
+++ b/custom_components/mypoolcopilot/manifest.json
@@ -1,7 +1,8 @@
 {
   "domain": "mypoolcopilot",
   "name": "MyPoolCopilot",
-  "version": "4.6.7",
+  "version": "4.6.8",
+  "homeassistant": "2024.5.0",
   "documentation": "https://github.com/gstax/mypoolcopilot",
   "issue_tracker": "https://github.com/gstax/mypoolcopilot/issues",
   "dependencies": [],
